fix: raised button z-index

--- a/Website/src/public/css/style.css
+++ b/Website/src/public/css/style.css
@@ -76,6 +76,11 @@ html {
   z-index: 2;
 }
 
+.terminal .title,
+.terminal .button {
+  z-index: 3;
+}
+
 .appheader {
   position: absolute;
   font-family: monospace;
